Adicionar roles nas controllers